fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/Procedure_Log__c.object-meta.xml
<CustomObject>
    <label>Procedure Log</label>
    <nameField>
        <displayFormat>PROC-{00000000}</displayFormat>
        <label>Procedure Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>