fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/CXR_Report__c.field-meta.xml
<CustomField>
    <fullName>CXR_Report__c</fullName>
    <label>CXR Report</label>
    <length>64</length>
    <type>Text</type>
</CustomField>