fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/End_Symbol__c.field-meta.xml
<CustomField>
    <fullName>End_Symbol__c</fullName>
    <label>End Symbol</label>
    <length>64</length>
    <type>Text</type>
</CustomField>