fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Length_of_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Procedure__c</fullName>
    <label>Length of Procedure</label>
    <length>64</length>
    <type>Text</type>
</CustomField>