fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Normal_P_Wave__c.field-meta.xml
<CustomField>
    <fullName>Normal_P_Wave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Normal P Wave</label>
    <type>Checkbox</type>
</CustomField>