fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Nurse_Initials__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Initials__c</fullName>
    <label>Nurse Initials</label>
    <length>64</length>
    <type>Text</type>
</CustomField>