fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Patient_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Record_Number__c</fullName>
    <label>Patient Record Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>