fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Time_CXR_Read__c.field-meta.xml
<CustomField>
    <fullName>Time_CXR_Read__c</fullName>
    <label>Time CXR Read</label>
    <type>DateTime</type>
</CustomField>