fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <label>Trial</label>
    <referenceTo>Trial__c</referenceTo>
    <relationshipLabel>Procedure Logs</relationshipLabel>
    <relationshipName>Procedure_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>