fullSandbox11072023/force-app/main/default/objects/Procedure_Log__c/recordTypes/VPS_Trial.recordType-meta.xml
<RecordType>
    <fullName>VPS_Trial</fullName>
    <active>true</active>
    <label>VPS Trial</label>
</RecordType>